cbits/Bullet.h

void btDiscreteDynamicsWorld_setConstraintSolver(void *c,void* p0); //method: setConstraintSolver void ( ::btDiscreteDynamicsWorld::* )( ::btConstraintSolver * ) 
void btDiscreteDynamicsWorld_m_constraintSolver_set(void *c,void* a); //attribute: ::btConstraintSolver * btDiscreteDynamicsWorld->m_constraintSolver
void* btDiscreteDynamicsWorld_m_constraintSolver_get(void *c); //attribute: ::btConstraintSolver * btDiscreteDynamicsWorld->m_constraintSolver
// attribute not supported: //attribute: ::btSimulationIslandManager * btDiscreteDynamicsWorld->m_islandManager
void btDiscreteDynamicsWorld_m_constraints_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btTypedConstraint*> btDiscreteDynamicsWorld->m_constraints
void* btDiscreteDynamicsWorld_m_constraints_get(void *c); //attribute: ::btAlignedObjectArray<btTypedConstraint*> btDiscreteDynamicsWorld->m_constraints
void btDiscreteDynamicsWorld_m_nonStaticRigidBodies_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btRigidBody*> btDiscreteDynamicsWorld->m_nonStaticRigidBodies
void* btDiscreteDynamicsWorld_m_nonStaticRigidBodies_get(void *c); //attribute: ::btAlignedObjectArray<btRigidBody*> btDiscreteDynamicsWorld->m_nonStaticRigidBodies
void btDiscreteDynamicsWorld_m_gravity_set(void *c,float* a); //attribute: ::btVector3 btDiscreteDynamicsWorld->m_gravity
void btDiscreteDynamicsWorld_m_gravity_get(void *c,float* a);
void btDiscreteDynamicsWorld_m_localTime_set(void *c,float a); //attribute: ::btScalar btDiscreteDynamicsWorld->m_localTime
float btDiscreteDynamicsWorld_m_localTime_get(void *c); //attribute: ::btScalar btDiscreteDynamicsWorld->m_localTime
void btDiscreteDynamicsWorld_m_ownsIslandManager_set(void *c,int a); //attribute: bool btDiscreteDynamicsWorld->m_ownsIslandManager
int btDiscreteDynamicsWorld_m_ownsIslandManager_get(void *c); //attribute: bool btDiscreteDynamicsWorld->m_ownsIslandManager
void btDiscreteDynamicsWorld_m_ownsConstraintSolver_set(void *c,int a); //attribute: bool btDiscreteDynamicsWorld->m_ownsConstraintSolver
int btDiscreteDynamicsWorld_m_ownsConstraintSolver_get(void *c); //attribute: bool btDiscreteDynamicsWorld->m_ownsConstraintSolver
void btDiscreteDynamicsWorld_m_synchronizeAllMotionStates_set(void *c,int a); //attribute: bool btDiscreteDynamicsWorld->m_synchronizeAllMotionStates
int btDiscreteDynamicsWorld_m_synchronizeAllMotionStates_get(void *c); //attribute: bool btDiscreteDynamicsWorld->m_synchronizeAllMotionStates
void btDiscreteDynamicsWorld_m_actions_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btActionInterface*> btDiscreteDynamicsWorld->m_actions
void* btDiscreteDynamicsWorld_m_actions_get(void *c); //attribute: ::btAlignedObjectArray<btActionInterface*> btDiscreteDynamicsWorld->m_actions
void btDiscreteDynamicsWorld_m_profileTimings_set(void *c,int a); //attribute: int btDiscreteDynamicsWorld->m_profileTimings
int btDiscreteDynamicsWorld_m_profileTimings_get(void *c); //attribute: int btDiscreteDynamicsWorld->m_profileTimings
void btDynamicsWorld_setGravity(void *c,float* p0); //method: setGravity void ( ::btDynamicsWorld::* )( ::btVector3 const & ) 
void btDynamicsWorld_addAction(void *c,void* p0); //method: addAction void ( ::btDynamicsWorld::* )( ::btActionInterface * ) 
void* btDynamicsWorld_getSolverInfo(void *c); //method: getSolverInfo ::btContactSolverInfo & ( ::btDynamicsWorld::* )(  ) 
void btDynamicsWorld_addRigidBody(void *c,void* p0); //method: addRigidBody void ( ::btDynamicsWorld::* )( ::btRigidBody * ) 
void btDynamicsWorld_addRigidBody0(void *c,void* p0); //method: addRigidBody void ( ::btDynamicsWorld::* )( ::btRigidBody * ) 
void btDynamicsWorld_addRigidBody1(void *c,void* p0,short int p1,short int p2); //method: addRigidBody void ( ::btDynamicsWorld::* )( ::btRigidBody *,short int,short int ) 
void btDynamicsWorld_clearForces(void *c); //method: clearForces void ( ::btDynamicsWorld::* )(  ) 