Physics/Bullet/Raw/BulletDynamics/Dynamics.chs

{#fun btDiscreteDynamicsWorld_setConstraintSolver as btDiscreteDynamicsWorld_setConstraintSolver    `( BtDiscreteDynamicsWorldClass bc , BtConstraintSolverClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ solver
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#39>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_constraintSolver_set    `( BtDiscreteDynamicsWorldClass bc , BtConstraintSolverClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#39>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_constraintSolver_get    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  } ->  `BtConstraintSolver'  mkBtConstraintSolver* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#43>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_constraints_set    `( BtDiscreteDynamicsWorldClass bc , BtAlignedObjectArray_btTypedConstraint_ptr_Class a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#43>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_constraints_get    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  } ->  `BtAlignedObjectArray_btTypedConstraint_ptr_'  mkBtAlignedObjectArray_btTypedConstraint_ptr_* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#45>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_nonStaticRigidBodies_set    `( BtDiscreteDynamicsWorldClass bc , BtAlignedObjectArray_btRigidBody_ptr_Class a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#45>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_nonStaticRigidBodies_get    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  } ->  `BtAlignedObjectArray_btRigidBody_ptr_'  mkBtAlignedObjectArray_btRigidBody_ptr_* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#47>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_gravity_set    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#47>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_gravity_get    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#50>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_localTime_set    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#50>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_localTime_get    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#53>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_ownsIslandManager_set    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc' ,  `Bool'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#53>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_ownsIslandManager_get    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#54>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_ownsConstraintSolver_set    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc' ,  `Bool'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#54>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_ownsConstraintSolver_get    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#55>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_synchronizeAllMotionStates_set    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc' ,  `Bool'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#55>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_synchronizeAllMotionStates_get    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#57>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_actions_set    `( BtDiscreteDynamicsWorldClass bc , BtAlignedObjectArray_btActionInterface_ptr_Class a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#57>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_actions_get    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  } ->  `BtAlignedObjectArray_btActionInterface_ptr_'  mkBtAlignedObjectArray_btActionInterface_ptr_* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#59>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_profileTimings_set    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#59>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_m_profileTimings_get    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * btDynamicsWorld
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.h?r=2223#83>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.cpp?r=2223>
-}
{#fun btDynamicsWorld_setGravity as btDynamicsWorld_setGravity    `( BtDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ gravity
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.h?r=2223#83>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.cpp?r=2223>
-}
{#fun btDynamicsWorld_setGravity as btDynamicsWorld_setGravity'    `( BtDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ gravity
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.h?r=2223#77>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.cpp?r=2223>
-}
{#fun btDynamicsWorld_addAction as btDynamicsWorld_addAction    `( BtDynamicsWorldClass bc , BtActionInterfaceClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ action
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.h?r=2223#131>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.cpp?r=2223>
-}
{#fun btDynamicsWorld_getSolverInfo as btDynamicsWorld_getSolverInfo    `( BtDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtContactSolverInfo'  mkBtContactSolverInfo* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.h?r=2223#88>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.cpp?r=2223>
-}
{#fun btDynamicsWorld_addRigidBody0 as btDynamicsWorld_addRigidBody    `( BtDynamicsWorldClass bc , BtRigidBodyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.h?r=2223#88>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.cpp?r=2223>
-}
{#fun btDynamicsWorld_addRigidBody0 as btDynamicsWorld_addRigidBody0    `( BtDynamicsWorldClass bc , BtRigidBodyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.h?r=2223#90>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.cpp?r=2223>
-}
{#fun btDynamicsWorld_addRigidBody1 as btDynamicsWorld_addRigidBody1    `( BtDynamicsWorldClass bc , BtRigidBodyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body
,  `Int'  -- ^ group
,  `Int'  -- ^ mask
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.h?r=2223#106>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDynamicsWorld.cpp?r=2223>
-}
{#fun btDynamicsWorld_clearForces as btDynamicsWorld_clearForces    `( BtDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
